@@ -4,6 +4,8 @@ Changelog
 1.3.1 - unreleased
 ------------------
 
+- Use the official ``aq_get`` API to acquire the request from a context.
+  [hannosch]
 
 1.3.0 - 2010-07-18
 ------------------
